[package]
edition = "2021"
name = "day12"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.profiling]
debug = true
inherits = "release"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "day12_benchmark"
