[package]
edition = "2021"
name = "day15"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestorm = {version = "0.5.1", features = ["enable_system_time"]}
lazy_static = "1.4.0"
regex = "1.7.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "day15_benchmark"
